# scripts

./: .gitattributes
.github/workflows/: simple-file-organiser-build.yaml
simple-file-organiser/: .gitignore  pyproject.toml  requirements.txt
simple-file-organiser/src/: cli.py  gui.py  main.py  simple_file_organiser.py
